fix image gallery spacing small screens

--- a/src/style.scss
+++ b/src/style.scss
@@ -535,7 +535,7 @@ a {
 }
 
 .travel-image, .food-image, .cat-image {
-	width: 2em;
+	width: 4em;
 	height: auto;
 	padding: 0;
 	margin: 0;
@@ -547,7 +547,7 @@ a {
 .travel-image1, .travel-image2, .travel-image3, .travel-image4, .travel-image5, .travel-image6,
 .food-image1, .food-image2, .food-image3, .food-image4, .food-image5, .food-image6,
 .cat-image1, .cat-image2, .cat-image3, .cat-image4, .cat-image5, .cat-image6 {
-	width: 2em;
+	width: 4em;
 	height: auto;
 	padding: 0;
 	margin: 0;
@@ -557,6 +557,18 @@ a {
 }
 
 @media (min-width: 400px) {
+	.travel-image, .food-image, .cat-image {
+		width: 5em;
+	}
+
+	.travel-image1, .travel-image2, .travel-image3, .travel-image4, .travel-image5, .travel-image6,
+	.food-image1, .food-image2, .food-image3, .food-image4, .food-image5, .food-image6,
+	.cat-image1, .cat-image2, .cat-image3, .cat-image4, .cat-image5, .cat-image6 {
+		width: 5em;
+	}
+}
+
+@media (min-width: 600px) {
 	.travel-image, .food-image, .cat-image {
 		width: 6em;
 	}
